I added the third page on the app.

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:layout_width="300dp"
@@ -94,7 +95,7 @@
             android:textSize="20sp"
             android:background="@drawable/ronded_botton"
             android:fontFamily="@font/montserratm"
-            android:id="@+id/login_btn"/>
+            android:id="@+id/register_btn"/>
 
         <!-- Already Have Account Text -->
         <TextView
