--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="morao">#DFD7FF</color>
+    <color name="iconuser">#7E6EBE</color>
+    <color name="grisb">#D9D9D9</color>
 </resources>
