--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="morao">#DFD7FF</color>
     <color name="iconuser">#7E6EBE</color>
     <color name="grisb">#D9D9D9</color>
+    <color name="celestee">#D8EFFF</color>
+    <color name="verde">#D8FFE1</color>
+    <color name="azulfuerte">#2E268E</color>
 </resources>
