--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,8 +39,21 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30sp"
+        android:layout_marginBottom="60sp"
         android:text="@string/home"
+        android:textColor="@color/azulfuerte"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/Patients"
+        tools:ignore="MissingConstraints">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/hello"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Hello, Samuel"
 
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/Patients"
@@ -52,7 +65,7 @@
         android:id="@+id/Patients"
         android:layout_width="350dp"
         android:layout_height="150dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="170dp"
         android:background="@drawable/shadow"
         app:cardElevation="7dp"
 
@@ -130,13 +143,37 @@
         android:id="@+id/analisis"
         android:layout_width="160dp"
         android:layout_height="150dp"
-        app:cardBackgroundColor="@color/black"
+        app:cardBackgroundColor="@color/celestee"
         app:cardCornerRadius="16dp"
-
+        android:background="@drawable/shadow"
+        app:cardElevation="7dp"
         app:layout_constraintBottom_toBottomOf="@id/devices"
-
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="DuplicateIds">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/weekly_analysis"
+
+            android:textSize="20sp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
+            >
+
+
+        </TextView>
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/chart2"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="60dp"
+
+            >
+
+        </ImageView>
 
     </androidx.cardview.widget.CardView>
 
@@ -158,12 +195,35 @@
         android:layout_width="160dp"
         android:layout_height="150dp"
         android:layout_marginTop="70dp"
-        app:cardBackgroundColor="@color/black"
+        app:cardBackgroundColor="@color/verde"
         app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-
+        android:background="@drawable/shadow"
+        app:cardElevation="7dp"
         app:layout_constraintTop_toBottomOf="@id/Patients"
         tools:ignore="DuplicateIds">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Devices"
+            android:textSize="20sp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp">
+
+        </TextView>
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bracelet"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="40dp"
+
+            >
+
+        </ImageView>
+
 
     </androidx.cardview.widget.CardView>
 
