--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -216,7 +216,7 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/bracelet"
+            android:src=""
             android:layout_marginStart="45dp"
             android:layout_marginTop="40dp"
 
