--- a/app/src/main/res/layout/activity_device_stats.xml
+++ b/app/src/main/res/layout/activity_device_stats.xml
@@ -41,9 +41,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <view
+    <androidx.cardview.widget.CardView
         android:id="@+id/card"
-        class="androidx.cardview.widget.CardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="20dp"
@@ -51,11 +50,13 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="150dp"
         app:cardBackgroundColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:cardElevation="12dp"
+        app:cardCornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
 
     <TextView
         android:layout_height="wrap_content"
@@ -88,12 +89,38 @@
         android:id="@+id/cardsubtittle"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:contentDescription="@string/braceletimage"
         app:layout_constraintTop_toTopOf="@id/cardsubtittle"
         app:layout_constraintBottom_toBottomOf="@id/card"
         app:layout_constraintEnd_toEndOf="@id/card"
         app:layout_constraintStart_toStartOf="@id/card"
-        android:src="@drawable/smartband"
-        android:elevation="100dp"/>
+        android:src="@drawable/Pulsera_03"
+        android:elevation="100dp"
+        android:id="@+id/bracelet_image"/>
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/bracelet_image"
+        app:layout_constraintEnd_toEndOf="@id/card"
+        app:layout_constraintBottom_toBottomOf="@id/card"
+        app:layout_constraintStart_toStartOf="@id/card"
+        android:src="@drawable/battery_svg"
+        android:elevation="100dp"
+        android:id="@+id/battery_svg"
+        android:contentDescription="@string/baterry_svg"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:hint="@string/have_you_experience_any_issues_with_this_device"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
