--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Hello, Samuel"
+        android:text="@string/hello_samuel"
 
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/Patients"
@@ -167,6 +167,7 @@
         <ImageView
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/imagen"
             android:src="@drawable/chart2"
             android:layout_marginStart="70dp"
             android:layout_marginTop="60dp"
@@ -206,7 +207,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Devices"
+            android:text="@string/devices"
             android:textSize="20sp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="20dp">
@@ -216,7 +217,8 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/bracelet"
+            android:contentDescription="@string/graph_ic"
+            android:src="@drawable/pulsera"
             android:layout_marginStart="45dp"
             android:layout_marginTop="40dp"
 
