--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -5,61 +5,75 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    app:layout_constraintEnd_toEndOf="parent"
     android:layout_marginTop="250dp"
+    android:padding="20dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
 
-    android:padding="20dp">
-
-
-
+    <!-- CardView for the main dialog background -->
     <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        app:cardBackgroundColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        app:cardCornerRadius="40dp"
-
         android:id="@+id/card"
-        android:padding="8dp"/>
-
-    <ImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:id="@+id/tick_svg"
-        android:contentDescription="@string/tick_svg"
-        android:src="@drawable/tick_circle_svg"
-        app:layout_constraintTop_toTopOf="@id/card"
-        app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintEnd_toEndOf="@id/card"/>
-
-    <!-- Dialog Message -->
-    <TextView
-        android:id="@+id/dialog_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/patient_succesfully_added"
-        android:textSize="24sp"
-        android:textColor="@color/black"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
         android:gravity="center"
         android:padding="8dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/tick_svg"
+        android:elevation="11dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="40dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <Button
-        android:id="@+id/positive_button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/dialog_message"
-        android:text="@string/ok"
-        app:layout_constraintEnd_toEndOf="@id/card"
-        app:layout_constraintStart_toStartOf="@id/card"
-        />
+        <!-- Content inside CardView -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <!-- Success Icon (Tick) -->
+            <ImageView
+                android:id="@+id/tick_svg"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:elevation="12dp"
+                android:layout_marginTop="20dp"
+                android:contentDescription="@string/tick_svg"
+                android:src="@drawable/tick_circle_svg"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <!-- Dialog Message -->
+            <TextView
+                android:id="@+id/dialog_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/patient_succesfully_added"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:elevation="12dp"
+                android:padding="8dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/tick_svg"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <!-- OK Button inside CardView -->
+            <Button
+                android:id="@+id/ok_btn"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:elevation="12dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/ok"
+                app:layout_constraintTop_toBottomOf="@id/dialog_message"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
