I am working with the sidebarmenu and i added many new icons

--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -6,4 +6,5 @@
         android:topRightRadius="40dp"
         android:bottomLeftRadius="0dp"
         android:topLeftRadius="0dp" />
+    <stroke android:color="@color/white"/>
 </shape>
