--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,12 @@
     <color name="celestee">#D8EFFF</color>
     <color name="verde">#D8FFE1</color>
     <color name="azulfuerte">#2E268E</color>
+    <color name="VioletLight">#F2F0FB</color>
+    <color name="VioletLightHover">#ECE8F9</color>
+    <color name="VioletDarker">#2C244C</color>
+    <color name="VioletLightActive">#D7D0F3</color>
+    <color name="BlueLight">#FCFBFF</color>
+
+
+
 </resources>
