agrege una pantalla de pacientes y puse como link en el menu al DeviceStatus aunque hace falta ver mas sobre el menu

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,6 @@
         android:text="@string/home_fragment"
         android:textSize="32sp"
         android:layout_centerInParent="true"
-        android:textColor="@color/VioletDarker"/>
+        android:textColor="@color/Primary_Dark"/>
 
 </RelativeLayout>
