--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,7 +19,7 @@
             android:layout_height="65dp"
             android:id="@+id/toolbar"
             android:elevation="4dp"
-            android:background="@color/VioletLight"
+            android:background="@color/Primary_Light"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
