--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,13 +4,14 @@
     android:orientation="vertical"
     android:gravity="bottom"
     android:padding="16dp"
-    android:background="@color/VioletDarker"
+    android:background="@color/Primary_Dark"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:layout_height="176dp">
     
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="60dp"
+        android:contentDescription="@string/userimage"
         android:src="@drawable/icon_account_circle"/>
 
     <TextView
@@ -26,7 +27,7 @@
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="contact info"
+        android:text="@string/contact_information"
         android:textColor="@color/VioletLightActive"
         android:fontFamily="@font/montserratbold"
         android:layout_marginBottom="16dp"
