--- a/app/src/main/res/layout/side_bar_menu.xml
+++ b/app/src/main/res/layout/side_bar_menu.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="85dp"
             android:orientation="horizontal"
-            android:background="@color/VioletDarker"
+            android:background="@color/Primary_Dark"
             android:gravity="top">
 
             <!-- ShapeableImageView for circular image -->
