--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -13,21 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:layout_width="300dp"
             android:layout_height="250dp"
+            android:contentDescription="@string/icon"
             android:src="@drawable/logoapp" />
 
         <EditText
             android:layout_width="350dp"
-            android:layout_height="36dp"
-            android:hint="Email"
+            android:layout_height="48dp"
+            android:hint="@string/email"
+            android:importantForAutofill="no"
             android:textColor="#9D9D9D"
             android:textColorHint="#9D9D9D"
             android:textSize="20sp"
-            android:padding="17px"
+            android:padding="6dp"
             android:elevation="12dp"
             android:fontFamily="@font/montserratm"
             android:background="@drawable/shadow"
@@ -36,13 +38,14 @@
 
         <EditText
             android:layout_width="350dp"
-            android:layout_height="36dp"
-            android:hint="Password"
+            android:layout_height="48dp"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
             android:textColor="#9D9D9D"
             android:layout_marginTop="16dp"
             android:textColorHint="#9D9D9D"
             android:textSize="20sp"
-            android:padding="17px"
+            android:padding="6dp"
             android:fontFamily="@font/montserratm"
             android:background="@drawable/shadow"
             android:elevation="12dp"
@@ -52,7 +55,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:text="Login"
+            android:text="@string/login"
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
             android:textSize="20sp"
@@ -63,38 +66,34 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forgot Password?"
+            android:text="@string/forgot_password"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/montserratm"
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up with"
+            android:text="@string/sign_up_with"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/montserratm"
             android:textColor="@color/black"
-
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="128dp"
             android:layout_height="match_parent"
             android:background="@drawable/line"
             android:layout_marginTop="-13dp"
-            android:layout_marginLeft="110dp"
-            />
+            android:layout_marginStart="110dp" />
+
         <TextView
             android:layout_width="128dp"
             android:layout_height="match_parent"
             android:background="@drawable/line"
             android:layout_marginTop="-20dp"
-            android:layout_marginRight="108dp"
-            />
-
-
+            android:layout_marginEnd="108dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -106,6 +105,7 @@
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:contentDescription="@string/facebook_logo"
                 android:src="@drawable/facebook_logo"
                 android:id="@+id/facebook_btn"
                 android:padding="4dp"
@@ -116,6 +116,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="16dp"
+                android:contentDescription="@string/google_logo"
                 android:src="@drawable/google_logo"
                 android:padding="4dp"
                 android:id="@+id/google_btn"/>
@@ -125,6 +126,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginBottom="32dp"
+            android:contentDescription="@string/email_logo"
             android:src="@drawable/email_logo"
             android:id="@+id/email_btn"/>
     </LinearLayout>
