--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:gravity="bottom"
+    android:orientation="horizontal"
+    android:gravity="top"
     android:padding="16dp"
-    android:background="@drawable/shadow"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:layout_height="176dp">
+    android:background="@color/morao"
+    android:id="@+id/Nav_Header"
+    android:layout_height="120dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:contentDescription="@string/imagen"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:contentDescription="@string/userimage"
         android:src="@drawable/icon_account_circle"/>
 
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/user_name"
-        android:textColor="@color/VioletLightActive"
+        android:text="@string/username"
+        android:textColor="@color/Primary_Dark"
         android:fontFamily="@font/montserratbold"
-        android:textSize="24sp"/>
+        android:layout_marginStart="20sp"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/contact_info"
-        android:textColor="@color/VioletLightActive"
+        android:text="@string/contact_information"
+        android:textColor="@color/Primary_Dark"
         android:fontFamily="@font/montserratbold"
         android:layout_marginBottom="16dp"
-        android:textSize="24sp"/>
-
+        android:layout_marginStart="20sp"
+        android:textSize="16sp"/>
 </LinearLayout>
