--- a/app/src/main/res/layout/patients_view.xml
+++ b/app/src/main/res/layout/patients_view.xml
@@ -1,200 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Primary_Light"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     tools:context=".PatientsView">
 
-    <!-- Incluir el layout común (icono de menú y notificación) -->
-    <include
-        android:id="@+id/header"
-        layout="@layout/layout_header" />
+    <!-- Content layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:id="@+id/patients_view">
 
-    <TextView
-        android:id="@+id/patients"
+        <!-- Header layout with the menu icon and notification -->
+        <include
+            android:id="@+id/header"
+            layout="@layout/layout_header" />
+
+        <!-- Title for the patients section -->
+        <TextView
+            android:id="@+id/patients"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/patients"
+            android:textSize="20sp"
+            android:fontFamily="@font/montserratbold"
+            android:textColor="@color/Primary_Dark"
+            android:layout_marginStart="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="100dp" />
+
+        <!-- First CardView for a patient -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:id="@+id/cardPatients"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patients"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shadow"
+            app:cardElevation="7dp"
+            app:cardBackgroundColor="@color/Primary_Light_active"
+            app:cardCornerRadius="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:padding="16dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/pulsera"
+                        android:contentDescription="@string/card_description" />
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/battery_svg"
+                        android:layout_marginStart="25dp"
+                        android:contentDescription="@string/batteryicon"
+                        app:tint="#7CFC00" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/patient_name"
+                        android:textSize="18sp"
+                        android:textColor="@color/Primary_Dark"
+                        android:layout_marginStart="16dp"
+                        android:layout_gravity="center_vertical" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status"
+                        android:textSize="18sp"
+                        android:textColor="@color/Primary_Dark"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center_vertical" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/patient_id"
+                    android:textSize="18sp"
+                    android:textColor="@color/Primary_Dark"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="48dp"
+                    android:layout_gravity="center_vertical" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Second CardView for a patient -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:id="@+id/secondCardPatients"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardPatients"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shadow"
+            app:cardElevation="7dp"
+            app:cardBackgroundColor="@color/Primary_Light_active"
+            app:cardCornerRadius="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:padding="16dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/pulsera"
+                        android:contentDescription="@string/card_description" />
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/battery_svg"
+                        android:layout_marginStart="25dp"
+                        android:contentDescription="@string/batteryicon" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/patient_name"
+                        android:textSize="18sp"
+                        android:layout_marginStart="16dp"
+                        android:layout_gravity="center_vertical" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status"
+                        android:textSize="18sp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center_vertical" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/patient_id"
+                    android:textSize="18sp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="48dp"
+                    android:layout_gravity="center_vertical" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Button to add a new patient -->
+        <ImageView
+            android:id="@+id/addButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:contentDescription="@string/add_icon"
+            android:src="@drawable/add_circle_ic"
+            app:layout_constraintTop_toBottomOf="@id/secondCardPatients"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/Primary_Buttoms"
+            android:layout_marginTop="30dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Navigation view for the menu -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/patients"
-        android:textSize="20sp"
-        android:fontFamily="@font/montserratbold"
-        android:textColor="@color/Primary_Dark"
-        android:layout_marginStart="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="100dp" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:itemIconTint="@color/VioletLightActive"
+        app:itemTextColor="@color/VioletLightActive"
+        app:menu="@menu/nav_menu" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:id="@+id/cardPatients"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/patients"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/shadow"
-        app:cardElevation="7dp"
-        app:cardBackgroundColor="@color/Primary_Light_active"
-        app:cardCornerRadius="20dp">
-
-        <!-- Layout inside the CardView -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:src="@drawable/pulsera"
-                    android:contentDescription="@string/card_description" />
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/battery_svg"
-                    android:layout_marginStart="25dp"
-                    android:contentDescription="@string/batteryicon" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/patient_name"
-                    android:textSize="18sp"
-                    android:textColor="@color/Primary_Dark"
-                    android:layout_marginStart="16dp"
-                    android:layout_gravity="center_vertical" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/status"
-                    android:textSize="18sp"
-                    android:textColor="@color/Primary_Dark"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_gravity="center_vertical" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/patient_id"
-                android:textSize="18sp"
-                android:textColor="@color/Primary_Dark"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="48dp"
-                android:layout_gravity="center_vertical" />
-
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:id="@+id/secondCardPatients"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardPatients"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/shadow"
-        app:cardElevation="7dp"
-        app:cardBackgroundColor="@color/Primary_Light_active"
-        app:cardCornerRadius="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:src="@drawable/pulsera"
-                    android:contentDescription="@string/card_description" />
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/battery_svg"
-                    android:layout_marginStart="25dp"
-                    android:contentDescription="@string/batteryicon" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/patient_name"
-                    android:textSize="18sp"
-                    android:layout_marginStart="16dp"
-                    android:layout_gravity="center_vertical" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/status"
-                    android:textSize="18sp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_gravity="center_vertical" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/patient_id"
-                android:textSize="18sp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="48dp"
-                android:layout_gravity="center_vertical" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <ImageView
-        android:id="@+id/addButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:contentDescription="@string/add_icon"
-        android:src="@drawable/add_circle_ic"
-        app:layout_constraintTop_toBottomOf="@id/secondCardPatients"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/Primary_Buttoms"
-        android:layout_marginTop="30dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
