Agrege la pantalla patients view y la conecte al menu, el menu ya tiene las redirecciones correctas

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -34,7 +34,7 @@
         android:id="@+id/nav_view"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
-        app:itemIconTint="@color/Primary_Dark"
-            app:itemTextColor="@color/Primary_Dark"
+        android:background="@color/white"
+        app:itemTextColor="@color/Primary_Dark"
         app:menu="@menu/nav_menu"/>
 </androidx.drawerlayout.widget.DrawerLayout>
