--- a/app/src/main/res/layout/activity_device_stats.xml
+++ b/app/src/main/res/layout/activity_device_stats.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout_device_status"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".DeviceStatus">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,7 +27,7 @@
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/card"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
@@ -41,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_height="wrap_content"
@@ -56,7 +58,7 @@
             android:fontFamily="@font/montserratm"
             android:hint="@string/behevior_monitor_tracker"
             android:textColorHint="@color/black"
-            android:id="@+id/cardtittle"/>
+            android:id="@+id/cardtittle" />
 
         <TextView
             android:layout_height="wrap_content"
@@ -71,7 +73,7 @@
             android:fontFamily="@font/montserratm"
             android:hint="@string/samid_bracelet_v2_1"
             android:textColorHint="@color/black"
-            android:id="@+id/cardsubtittle"/>
+            android:id="@+id/cardsubtittle" />
 
         <ImageView
             android:layout_width="220dp"
@@ -83,7 +85,7 @@
             app:layout_constraintStart_toStartOf="@id/card"
             android:src="@drawable/pulsera"
             android:elevation="100dp"
-            android:id="@+id/bracelet_image"/>
+            android:id="@+id/bracelet_image" />
 
         <ImageView
             android:layout_width="50dp"
@@ -95,7 +97,7 @@
             android:src="@drawable/battery_svg"
             android:elevation="100dp"
             android:id="@+id/battery_svg"
-            android:contentDescription="@string/baterry_svg"/>
+            android:contentDescription="@string/baterry_svg" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,15 +107,18 @@
             android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:hint="@string/have_you_experience_any_issues_with_this_device"/>
+            android:hint="@string/have_you_experience_any_issues_with_this_device" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view_device_status"
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/nav_menu" />
-
+        app:headerLayout="@layout/nav_header"
+        app:itemIconTint="@color/Primary_Dark"
+        app:itemTextColor="@color/Primary_Dark"
+        app:menu="@menu/nav_menu"
+        android:layout_marginTop="20dp" />
 </androidx.drawerlayout.widget.DrawerLayout>
