--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,10 @@
     android:background="@color/white"
     tools:context=".HomeActivity">
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/layout_header" />
+
     <!-- Contenido principal (tu diseño actual) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/activity_home"
@@ -14,28 +18,6 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="30dp"
         tools:context=".HomeActivity">
-
-        <!-- Icono del menú (hamburguesa) -->
-        <ImageView
-            android:id="@+id/rayas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/baseline_menu_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription" />
-
-        <!-- Icono de notificación -->
-        <ImageView
-            android:id="@+id/notificacion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/notification_icon"
-            app:layout_constraintBottom_toBottomOf="@id/rayas"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/black"
-            tools:ignore="ContentDescription" />
 
         <!-- Texto de bienvenida -->
         <TextView
