--- a/app/src/main/res/layout/patients_view.xml
+++ b/app/src/main/res/layout/patients_view.xml
@@ -9,12 +9,12 @@
     android:fitsSystemWindows="true"
     tools:context=".PatientsView">
 
-    <!-- Content layout -->
+    <!-- Navigation view for the menu -->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/patients_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:id="@+id/patients_view">
+        android:background="@color/white">
 
         <!-- Header layout with the menu icon and notification -->
         <include
@@ -26,29 +26,29 @@
             android:id="@+id/patients"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/patients"
-            android:textSize="20sp"
-            android:fontFamily="@font/montserratbold"
-            android:textColor="@color/Primary_Dark"
             android:layout_marginStart="50dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="100dp"
+            android:fontFamily="@font/montserratbold"
+            android:text="@string/patients"
+            android:textColor="@color/Primary_Dark"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="100dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- First CardView for a patient -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardPatients"
             android:layout_width="350dp"
             android:layout_height="150dp"
-            android:id="@+id/cardPatients"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/patients"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/shadow"
-            app:cardElevation="7dp"
             app:cardBackgroundColor="@color/Primary_Light_active"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="20dp"
+            app:cardElevation="7dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patients">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,59 +59,59 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:src="@drawable/pulsera"
-                        android:contentDescription="@string/card_description" />
+                        android:contentDescription="@string/card_description"
+                        android:src="@drawable/pulsera" />
 
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/battery_svg"
                         android:layout_marginStart="25dp"
                         android:contentDescription="@string/batteryicon"
+                        android:src="@drawable/battery_svg"
                         app:tint="#7CFC00" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/patient_name"
-                        android:textSize="18sp"
-                        android:textColor="@color/Primary_Dark"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
-                        android:layout_gravity="center_vertical" />
+                        android:text="@string/patient_name"
+                        android:textColor="@color/Primary_Dark"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/status"
-                        android:textSize="18sp"
-                        android:textColor="@color/Primary_Dark"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
-                        android:layout_gravity="center_vertical" />
+                        android:text="@string/status"
+                        android:textColor="@color/Primary_Dark"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/patient_id"
-                    android:textSize="18sp"
-                    android:textColor="@color/Primary_Dark"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="48dp"
-                    android:layout_gravity="center_vertical" />
+                    android:text="@string/patient_id"
+                    android:textColor="@color/Primary_Dark"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -119,18 +119,18 @@
 
         <!-- Second CardView for a patient -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/secondCardPatients"
             android:layout_width="350dp"
             android:layout_height="150dp"
-            android:id="@+id/secondCardPatients"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardPatients"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/shadow"
-            app:cardElevation="7dp"
             app:cardBackgroundColor="@color/Primary_Light_active"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="20dp"
+            app:cardElevation="7dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardPatients">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -141,55 +141,55 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:src="@drawable/pulsera"
-                        android:contentDescription="@string/card_description" />
+                        android:contentDescription="@string/card_description"
+                        android:src="@drawable/pulsera" />
 
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/battery_svg"
                         android:layout_marginStart="25dp"
-                        android:contentDescription="@string/batteryicon" />
+                        android:contentDescription="@string/batteryicon"
+                        android:src="@drawable/battery_svg" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/patient_name"
-                        android:textSize="18sp"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
-                        android:layout_gravity="center_vertical" />
+                        android:text="@string/patient_name"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/status"
-                        android:textSize="18sp"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
-                        android:layout_gravity="center_vertical" />
+                        android:text="@string/status"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/patient_id"
-                    android:textSize="18sp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="48dp"
-                    android:layout_gravity="center_vertical" />
+                    android:text="@string/patient_id"
+                    android:textSize="18sp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -199,24 +199,23 @@
             android:id="@+id/addButton"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginTop="30dp"
             android:contentDescription="@string/add_icon"
             android:src="@drawable/add_circle_ic"
-            app:layout_constraintTop_toBottomOf="@id/secondCardPatients"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/Primary_Buttoms"
-            android:layout_marginTop="30dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/secondCardPatients"
+            app:tint="@color/Primary_Buttoms" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Navigation view for the menu -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
-        app:itemIconTint="@color/VioletLightActive"
-        app:itemTextColor="@color/VioletLightActive"
-        app:menu="@menu/nav_menu" />
-
+        app:itemIconTint="@color/Primary_Dark"
+        app:itemTextColor="@color/Primary_Dark"
+        app:menu="@menu/nav_menu"
+        android:layout_marginTop="20dp" />
 </androidx.drawerlayout.widget.DrawerLayout>
