--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,6 @@
     <color name="Primary_Dark">#2C244C</color>
     <color name="VioletLightActive">#D7D0F3</color>
     <color name="BlueLight">#FCFBFF</color>
-    7d66d8
-
+    <color name="Primary_Normal">#7d66d8</color>
+    <color name="Secondary_Normal">#2e268e</color>
 </resources>
