--- a/app/src/main/res/layout/activity_device_stats.xml
+++ b/app/src/main/res/layout/activity_device_stats.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/user_s_status_device"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/montserratregular"
+            android:fontFamily="@font/montserrat_regular"
             android:textColorHint="#2E268E"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/card"
@@ -56,7 +56,7 @@
             android:layout_marginTop="10dp"
             android:elevation="100dp"
             android:textSize="15sp"
-            android:fontFamily="@font/montserratm"
+            android:fontFamily="@font/montserrat"
             android:hint="@string/behevior_monitor_tracker"
             android:textColorHint="@color/black"
             android:id="@+id/cardtittle" />
@@ -71,7 +71,7 @@
             android:layout_marginTop="20dp"
             android:elevation="100dp"
             android:textSize="12sp"
-            android:fontFamily="@font/montserratm"
+            android:fontFamily="@font/montserrat"
             android:hint="@string/samid_bracelet_v2_1"
             android:textColorHint="@color/black"
             android:id="@+id/cardsubtittle" />
