--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="16dp"
-    android:background="@drawable/login_background"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -31,7 +31,7 @@
             android:textSize="20sp"
             android:padding="6dp"
             android:elevation="12dp"
-            android:fontFamily="@font/montserratm"
+            android:fontFamily="@font/montserrat"
             android:background="@drawable/shadow"
             android:inputType="text"
             android:id="@+id/username_input" />
@@ -46,7 +46,7 @@
             android:textColorHint="#9D9D9D"
             android:textSize="20sp"
             android:padding="6dp"
-            android:fontFamily="@font/montserratm"
+            android:fontFamily="@font/montserrat"
             android:background="@drawable/shadow"
             android:elevation="12dp"
             android:inputType="textPassword"
@@ -58,9 +58,9 @@
             android:text="@string/login"
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:background="@drawable/ronded_botton"
-            android:fontFamily="@font/montserratm"
+            android:textSize="18sp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/montserrat_bold"
             android:id="@+id/login_btn"/>
 
         <TextView
@@ -69,7 +69,7 @@
             android:text="@string/forgot_password"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/montserratm"
+            android:fontFamily="@font/montserrat"
             android:textSize="16sp"/>
 
         <TextView
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="@string/sign_up_with"
             android:layout_marginTop="24dp"
-            android:fontFamily="@font/montserratm"
+            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="16sp"/>
 
