--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="@string/username"
         android:textColor="@color/Primary_Dark"
-        android:fontFamily="@font/montserratbold"
+        android:fontFamily="@font/montserrat_bold"
         android:layout_marginStart="20sp"
         android:textSize="16sp"/>
 
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:text="@string/contact_information"
         android:textColor="@color/Primary_Dark"
-        android:fontFamily="@font/montserratbold"
+        android:fontFamily="@font/montserrat_bold"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="20sp"
         android:textSize="16sp"/>
