--- a/app/src/main/res/layout/patients_view.xml
+++ b/app/src/main/res/layout/patients_view.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="100dp"
-            android:fontFamily="@font/montserratbold"
+            android:fontFamily="@font/montserrat_bold"
             android:text="@string/patients"
             android:textColor="@color/Primary_Dark"
             android:textSize="30sp"
