--- a/app/src/main/res/layout/activity_device_stats.xml
+++ b/app/src/main/res/layout/activity_device_stats.xml
@@ -38,13 +38,14 @@
             android:layout_marginTop="150dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="150dp"
-            app:cardBackgroundColor="@color/white"
+            app:cardBackgroundColor="@color/Primary_Light"
             app:cardElevation="12dp"
             app:cardCornerRadius="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:layout_height="wrap_content"
@@ -121,5 +122,6 @@
         app:itemIconTint="@color/Primary_Dark"
         app:itemTextColor="@color/Primary_Dark"
         app:menu="@menu/nav_menu"
+        android:background="@color/white"
         android:layout_marginTop="20dp" />
 </androidx.drawerlayout.widget.DrawerLayout>
