--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,6 @@
         android:id="@+id/header"
         layout="@layout/layout_header" />
 
-    <!-- Contenido principal (tu diseño actual) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/activity_home"
         android:layout_width="match_parent"
@@ -19,18 +18,18 @@
         android:layout_marginHorizontal="30dp"
         tools:context=".HomeActivity">
 
-        <!-- Texto de bienvenida -->
         <TextView
             android:id="@+id/hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/hello_samuel"
+            android:textColor="@color/Secondary_Darker"
             android:textSize="20sp"
+            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintBottom_toTopOf="@id/Patients"
             tools:ignore="MissingConstraints" />
 
-        <!-- Tarjeta de pacientes -->
         <androidx.cardview.widget.CardView
             android:id="@+id/Patients"
             android:layout_width="350dp"
@@ -44,18 +43,18 @@
             app:layout_constraintTop_toTopOf="parent"
             android:fontFamily="@font/montserrat">
 
-            <!-- Botón dentro de la tarjeta de pacientes -->
             <Button
                 android:id="@+id/pacientBtn"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="@string/consultarP"
-                android:backgroundTint="@color/white"
-                android:textColor="@color/black"
                 android:layout_marginStart="135dp"
-                android:layout_marginTop="50dp" />
+                android:layout_marginTop="50dp"
+                android:backgroundTint="@color/Primary_Normal"
+                android:text="@string/consultarP"
+                android:textSize="13sp"
+                android:fontFamily="@font/montserrat_bold"
+                android:textColor="@color/Secondary_Light" />
 
-            <!-- Icono de flecha dentro de la tarjeta -->
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="wrap_content"
@@ -92,7 +91,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/weekly_analysis"
-                android:textSize="20sp"
+                android:textColor="@color/Secondary_Darker"
+                android:textSize="18sp"
+                android:fontFamily="@font/montserrat_semi_bold"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="20dp" />
 
@@ -112,6 +113,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:text="@string/activities"
+            android:textColor="@color/Secondary_Darker"
+            android:fontFamily="@font/montserrat_bold"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/analisis"
             tools:ignore="MissingConstraints" />
@@ -133,7 +136,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/devices"
-                android:textSize="20sp"
+                android:textSize="18sp"
+                android:textColor="@color/Secondary_Darker"
+                android:fontFamily="@font/montserrat_semi_bold"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="20dp" />
 
@@ -157,6 +162,7 @@
         app:menu="@menu/nav_menu"
         app:headerLayout="@layout/nav_header"
         app:itemIconTint="@color/black"
+        android:background="@color/white"
         app:itemTextColor="@color/black" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
