--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,11 @@
             android:hint="@string/email"
             android:importantForAutofill="no"
             android:textColor="#9D9D9D"
-            android:textColorHint="#9D9D9D"
             android:textSize="20sp"
             android:padding="6dp"
-            android:elevation="12dp"
+            android:elevation="5dp"
             android:fontFamily="@font/montserrat"
-            android:background="@drawable/shadow"
+            android:background="@drawable/input_rectangles"
             android:inputType="text"
             android:id="@+id/username_input" />
 
@@ -47,8 +46,8 @@
             android:textSize="20sp"
             android:padding="6dp"
             android:fontFamily="@font/montserrat"
-            android:background="@drawable/shadow"
-            android:elevation="12dp"
+            android:background="@color/Primary_Light"
+            android:elevation="5dp"
             android:inputType="textPassword"
             android:id="@+id/password_input" />
 
@@ -103,8 +102,8 @@
             android:layout_marginTop="16dp">
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:contentDescription="@string/facebook_logo"
                 android:src="@drawable/facebook_logo"
                 android:id="@+id/facebook_btn"
@@ -113,8 +112,8 @@
                 />
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_margin="16dp"
                 android:contentDescription="@string/google_logo"
                 android:src="@drawable/google_logo"
@@ -123,8 +122,8 @@
 
         </LinearLayout>
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginBottom="32dp"
             android:contentDescription="@string/email_logo"
             android:src="@drawable/email_logo"
