--- a/app/src/main/res/layout/patients_view.xml
+++ b/app/src/main/res/layout/patients_view.xml
@@ -44,7 +44,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light_active"
+            app:cardBackgroundColor="@color/Primary_Light"
             app:cardCornerRadius="20dp"
             app:cardElevation="7dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +126,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light_active"
+            app:cardBackgroundColor="@color/Primary_Light"
             app:cardCornerRadius="20dp"
             app:cardElevation="7dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -217,5 +217,6 @@
         app:itemIconTint="@color/Primary_Dark"
         app:itemTextColor="@color/Primary_Dark"
         app:menu="@menu/nav_menu"
+        android:background="@color/white"
         android:layout_marginTop="20dp" />
 </androidx.drawerlayout.widget.DrawerLayout>
