--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,9 @@
     <color name="BlueLight">#FCFBFF</color>
     <color name="Primary_Normal">#7d66d8</color>
     <color name="Secondary_Normal">#2e268e</color>
+    <color name="Secondary_Darker">#100d32</color>
+    <color name="Secondary_Light">#eae9f4</color>
+    <color name="Gray">#4E4B59</color>
+
 
 </resources>
